--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     container_name: db-container
     image: postgres:latest
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/postgres/data/
     env_file:
       - ./.env.dev
     environment:
@@ -28,7 +28,7 @@ services:
       dockerfile: Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/app
+      - ./app/:/usr/src/app/
     env_file:
       - ./.env.dev
     ports:
@@ -45,7 +45,7 @@ services:
       dockerfile: Dockerfile
     command: celery -A api worker --loglevel=info
     volumes:
-      - .:/app
+      - ./app/:/usr/src/app/
     env_file:
       - ./.env.dev
     depends_on:
